# kelinode-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh
.github/workflows/: ci.yml  release.yml
docs/: BUILD_ALLOCATOR_AB.md  CONTRACT.md  GO_MODEL_PARITY.md  MIERU_MATURITY.md  NAIVE_MATURITY.md  NATIVE_CORE_CAPABILITY_MATRIX.md  NATIVE_CORE_GRAY_RELEASE.md  NATIVE_CORE_PARITY.md  NATIVE_CORE_SELF_ACCEPTANCE.md  PRODUCTION_STABILITY_BASELINE.md  ROADMAP.md  TROJAN_MATURITY.md
docs/plans/: 2026-06-12-website-proxy.md
docs/superpowers/plans/: 2026-06-14-build-allocator-ab.md
docs/superpowers/specs/: 2026-05-19-go-parity-stabilization-design.md  2026-06-14-build-allocator-ab-design.md
script/: install.sh
scripts/: package-native-node.sh
scripts/interop/: mieru_official_remote.sh  mihomo_client_regression.sh  naive_official_remote.sh  native_matrix_remote.sh  remote_common.sh  trojan_ws_remote.sh
scripts/ops/: native_resource_gate.sh  native_resource_watch.sh
scripts/perf/: build-allocator-ab.ps1
src/: config.rs  control.rs  core.rs  core_control.rs  health.rs  lib.rs  logging.rs  machine.rs  main.rs  native_capability.rs  node.rs  port_forward.rs  process.rs  realtime.rs  realtime_client.rs  report.rs  runner.rs  runtime.rs  subscription_proxy.rs  system.rs  upgrade.rs  user.rs
src/panel/: client.rs  contract.rs  mod.rs  types.rs
tests/: install_script_source.rs
tests/fixtures/go_model_parity/: go_legacy_fixtures.json
