[package]
name = "kelinode-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MPL-2.0"
description = "Rust implementation track for the Keli node agent."

[lib]
name = "kelinode_rs"
path = "src/lib.rs"

[[bin]]
name = "kelinode-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1"
futures-util = "0.3.32"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha1 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
