[package]
name = "kelinode-rs"
version = "0.1.39"
edition = "2021"
rust-version = "1.74"
license = "MPL-2.0"
description = "Rust implementation track for the Keli node agent."

[lib]
name = "kelinode_rs"
path = "src/lib.rs"

[[bin]]
name = "kelinode-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1"
futures-util = "0.3.32"
getrandom = "0.2"
keli-core-rs = { path = "../keli-core-rs", optional = true }
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "brotli", "deflate", "gzip", "json", "rustls-tls", "zstd"] }
rmp-serde = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha1 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

[features]
default = []
embedded-core = ["dep:keli-core-rs"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
